--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="project-container align-right">
                 <div class="project-card">
                     <img src="imagens/projeto-wildbeast.jpg" alt="Projeto 2">
-                    <h3>Projeto 2</h3>
+                    <h3>Projeto WildBeast</h3>
                     <p>
                         O projeto permite aos usuários aprenderem sobre as características de diferentes animais. desenvolvido com HTML e CSS (grid-layout).
                     </p>
@@ -67,7 +67,7 @@
             <div class="project-container">
                 <div class="project-card">
                     <img src="imagens/projeto-bikcraft.jpg" alt="Projeto 3">
-                    <h3>Projeto 3</h3>
+                    <h3>Projeto Bikcraft</h3>
                     <p>
                         Plataforma online para explorar e adquirir uma ampla variedade de bicicletas e acessórios relacionados. Os visitantes podem navegar pelas categorias de produtos, obter informações detalhadas sobre cada bicicleta. Desenvolvido com HTML, CSS e JavaScript.
                     </p>
@@ -81,7 +81,7 @@
             <div class="project-container align-right">
                 <div class="project-card">
                     <img src="imagens/projeto-flexblog.jpg" alt="Projeto 4">
-                    <h3>Projeto 4</h3>
+                    <h3>Projeto Desevendando Estilos</h3>
                     <p>
                         O projeto é um site de moda online criado com HTML e CSS (Flex-Box). Ele apresenta artigos de moda, dicas de estilo e tendências atuais em um layout elegante e responsivo.
                     </p>
