--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                         Uma Calculadora que diz a você se vale mais a pena colocar Álcool ou gasolina, com base no preço atual de cada. Desenvolvido com HTML, CSS e JavaScript.
                     </p>
                     <div class="buttons">
-                        <a href="#" class="btn">GitHub</a>
-                        <a href="#" class="btn">Deploy</a>
+                        <a href="https://github.com/Arleisousa/Projeto-Calculadora" target="_blank" class="btn">GitHub</a>
+                        <a href="https://arleisousa.github.io/Projeto-Calculadora/" target="_blank" class="btn">Deploy</a>
                     </div>
                 </div>
             </div>
@@ -58,8 +58,8 @@
                         O projeto permite aos usuários aprenderem sobre as características de diferentes animais. desenvolvido com HTML e CSS (grid-layout).
                     </p>
                     <div class="buttons">
-                        <a href="#" class="btn">GitHub</a>
-                        <a href="#" class="btn">Deploy</a>
+                        <a href="https://github.com/Arleisousa/ProjetoWildBeast" target="_blank" class="btn">GitHub</a>
+                        <a href="https://arleisousa.github.io/ProjetoWildBeast/" target="_blank" class="btn">Deploy</a>
                     </div>
                 </div>
             </div>
@@ -72,8 +72,8 @@
                         Plataforma online para explorar e adquirir uma ampla variedade de bicicletas e acessórios relacionados. Os visitantes podem navegar pelas categorias de produtos, obter informações detalhadas sobre cada bicicleta. Desenvolvido com HTML, CSS e JavaScript.
                     </p>
                     <div class="buttons">
-                        <a href="#" class="btn">GitHub</a>
-                        <a href="#" class="btn">Deploy</a>
+                        <a href="https://github.com/Arleisousa/Projeto-Bikcraft" target="_blank" class="btn">GitHub</a>
+                        <a href= "https://arleisousa.github.io/Projeto-Bikcraft/" target="_blank" class="btn">Deploy</a>
                     </div>
                 </div>
             </div>
@@ -86,8 +86,8 @@
                         O projeto é um site de moda online criado com HTML e CSS (Flex-Box). Ele apresenta artigos de moda, dicas de estilo e tendências atuais em um layout elegante e responsivo.
                     </p>
                     <div class="buttons">
-                        <a href="#" class="btn">GitHub</a>
-                        <a href="#" class="btn">Deploy</a>
+                        <a href="https://github.com/Arleisousa/Projeto-Blog" target="_blank" class="btn">GitHub</a>
+                        <a href="https://arleisousa.github.io/Projeto-Blog/" target="_blank" class="btn">Deploy</a>
                     </div>
                 </div> 
             </div>
@@ -145,7 +145,9 @@
             <div class="footer-contato">
                 <a href="https://github.com/Arleisousa" class="footer-img" target="_blank"><img src="imagens/github.svg"
                         alt="GitHub"></a>
-                <a href="#" class="footer-img"><img src="imagens/linkedin-original.svg" alt="linkedin"></a>
+
+                <a href="https://www.linkedin.com/in/arlei-sousa-95258028b/" target="_blank" class="footer-img"><img src="imagens/linkedin-original.svg" alt="linkedin"></a>
+
                 <a href="https://wa.me/qr/ZWEORGOXD677P1" class="footer-img" target="_blank"><img
                         src="imagens/icons8-whatsapp.svg" alt="whatssap"></a>
             </div>
