--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="imagens/letra-a.png" type="image/x-icon">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <title>Arlei Domingos Portfólio</title>
 </head>
 
 <body>
     <header class="header">
-        <h2> { Arlei Sousa }</h2>
+        <h2 data-aos="zoom-in" data-aos-delay="100"> { Arlei Sousa } </h2>
         <nav>
             <ul class="header-menu">
                 <li><a href="#projetos">Projetos</a></li>
@@ -37,7 +39,7 @@
     <div class="container">
         <section class="projetos" id="projetos" aria-label="projetos">
             <div class="project-container">
-                <div class="project-card">
+                <div class="project-card" data-aos="fade-up" data-aos-delay="300">
                     <img src="imagens/projetoCalc.jpg" alt="Projeto 1">
                     <h3>Projeto Calculadora</h3>
                     <p>
@@ -50,7 +52,7 @@
                 </div>
             </div>
 
-            <div class="project-container align-right">
+            <div class="project-container align-right " data-aos="fade-up" data-aos-delay="300">
                 <div class="project-card">
                     <img src="imagens/projeto-wildbeast.jpg" alt="Projeto 2">
                     <h3>Projeto WildBeast</h3>
@@ -64,8 +66,8 @@
                 </div>
             </div>
 
-            <div class="project-container">
-                <div class="project-card">
+            <div class="project-container" data-aos="fade-up" data-aos-delay="300">
+                <div class="project-card" >
                     <img src="imagens/projeto-bikcraft.jpg" alt="Projeto 3">
                     <h3>Projeto Bikcraft</h3>
                     <p>
@@ -78,7 +80,7 @@
                 </div>
             </div>
 
-            <div class="project-container align-right">
+            <div class="project-container align-right" data-aos="fade-up" data-aos-delay="300">
                 <div class="project-card">
                     <img src="imagens/projeto-flexblog.jpg" alt="Projeto 4">
                     <h3>Projeto Desevendando Estilos</h3>
