--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
         <section class="projetos" id="projetos" aria-label="projetos">
             <div class="project-container">
                 <div class="project-card" data-aos="fade-up" data-aos-delay="300">
-                    <img src="imagens/projetoCalc.jpg" alt="Projeto 1">
-                    <h3>Projeto Calculadora</h3>
+                    <img src="imagens/devbarber.jpg" alt="Projeto 1">
+                    <h3>Projeto Barbearia</h3>
                     <p>
-                        Uma Calculadora que diz a você se vale mais a pena colocar Álcool ou gasolina, com base no preço atual de cada. Desenvolvido com HTML, CSS e JavaScript.
+                        Landing page para uma barbearia. Essa página permite que os clientes agendem horários, confiram os serviços e entrem em contato facilmente. Desenvolvido comm HTML e CSS, e usando a bibliteoca AOS. 
                     </p>
                     <div class="buttons">
-                        <a href="https://github.com/Arleisousa/Projeto-Calculadora" target="_blank" class="btn">GitHub</a>
-                        <a href="https://arleisousa.github.io/Projeto-Calculadora/" target="_blank" class="btn">Deploy</a>
+                        <a href="https://github.com/Arleisousa/ProjetoBarber" target="_blank" class="btn">GitHub</a>
+                        <a href= "https://arleisousa.github.io/ProjetoBarber/" target="_blank" class="btn">Deploy</a>
                     </div>
                 </div>
             </div>
