--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <img src="imagens/devbarber.jpg" alt="Projeto 1">
                     <h3>Projeto Barbearia</h3>
                     <p>
-                        Landing page para uma barbearia. Essa página permite que os clientes agendem horários, confiram os serviços e entrem em contato facilmente. Desenvolvido comm HTML e CSS, e usando a bibliteoca AOS. 
+                        Landing page para uma barbearia. Essa página permite que os clientes agendem horários, confiram os serviços e entrem em contato facilmente. Desenvolvido comm HTML e CSS, e usando a biblioteca AOS. 
                     </p>
                     <div class="buttons">
                         <a href="https://github.com/Arleisousa/ProjetoBarber" target="_blank" class="btn">GitHub</a>
