--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
         </div>
     <div class="container">
         <section class="projetos" id="projetos" aria-label="projetos">
-            <div class="project-container">
-                <div class="project-card" data-aos="fade-up" data-aos-delay="300">
-                    <img src="imagens/devbarber.jpg" alt="Projeto 1">
+            
+            <div class="project-container" data-aos="fade-up" data-aos-delay="300">
+                <div class="project-card" >
+                    <img src="imagens/devbarber.jpg" alt="Projeto 3">
                     <h3>Projeto Barbearia</h3>
                     <p>
-                        Landing page para uma barbearia. Essa página permite que os clientes agendem horários, confiram os serviços e entrem em contato facilmente. Desenvolvido comm HTML e CSS, e usando a biblioteca AOS. 
+                        Landing page para uma barbearia. Essa página permite que os clientes agendem horários, confiram os serviços e entrem em contato facilmente. Desenvolvido comm HTML e CSS, e usando a biblioteca AOS.
                     </p>
                     <div class="buttons">
                         <a href="https://github.com/Arleisousa/ProjetoBarber" target="_blank" class="btn">GitHub</a>
